--- a/TadpoleDataDispose/pom.xml
+++ b/TadpoleDataDispose/pom.xml
@@ -4,6 +4,8 @@
   <artifactId>TadpoleDataDispose</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
+  
+  	<!-- google的图片压缩 -->
 	<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
 	<dependency>
 	    <groupId>net.coobird</groupId>
