--- a/TadpoleDataDispose/pom.xml
+++ b/TadpoleDataDispose/pom.xml
@@ -12,5 +12,23 @@
 	    <artifactId>thumbnailator</artifactId>
 	    <version>0.4.7</version>
 	</dependency>
+	
+	<!-- 日记库 -->
+	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.16</version>
+	</dependency>
+	
+	<!-- 最常用的json -->
+	<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+	<dependency>
+	  <groupId>net.sf.json-lib</groupId>
+	  <artifactId>json-lib</artifactId>
+	  <version>2.4</version>
+	  <classifier>jdk15</classifier>
+	</dependency>
+		
   </dependencies>
 </project>
