--- a/TadpoleDataDispose/.classpath
+++ b/TadpoleDataDispose/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/jave-1.0.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
